--- a/src/main.css
+++ b/src/main.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 body{
-	background: url('../images/space.jpg') no-repeat;
+	background: url('/images/background.jpg') no-repeat;
 	background-size: cover;
 }
 
@@ -38,20 +38,20 @@ ul {
 #container {
 	margin-left: auto;
 	margin-right: auto;
-	width: 1000px;
-	height: 500px;
+	width: 1250px;
+	height: 850px;
 	background: transparent;
 }
 
 .game-container {
-	width: 80%;
-	height: 80%;
-	background: transparent;
+	width: 85%;
+	height: 70%;
+	background: transparent url('/images/axiom.png') no-repeat center;
 	margin-left: auto;
 	margin-right: auto;
 }
 .game-info {
-	margin-left: 55px;
+	margin-left: 15%;
 	width: 110%;
 	height: 25%;
 	font-size: 4em;
@@ -60,24 +60,26 @@ ul {
 }
 
 .game-board {
-	margin-left: 200px;
+	margin-left: 350px;
 	background: transparent;
-	padding: 10px;
-	width: 95%;
-	height: 85%;
+	padding-left: 50px;
+
+	width: 55%;
+	height: 55%;
 	color: yellow;
 	display: inline-block;
+	
 }
 
 .game-card {
 	cursor: pointer;
 	border-radius: 50%;
-	width: 20%;
-	height: 28%;
+	width: 22%;
+	height: 25%;
 	background: 'bababa';
 	background-size: 'cover';
 	opacity: .96;
-	margin: 2% 2% 0 3%;
+	margin: 2% 0% 0 3%;
     box-shadow: inset 5px 5px 15px #000;
     border: 1px solid black;
 }
@@ -127,10 +129,11 @@ button:active { box-shadow: 1px 2px 5px; margin: 7px 6px 5px 126px;}
 }
 
 .walle-counter {
-	width: 105px;
+	width: 90px;
 	border-radius: 50%;
 	position: absolute;
 	margin-left: -105px;
+	margin-top: -10px;
 
 }
 
