--- a/src/main.css
+++ b/src/main.css
@@ -3,7 +3,7 @@ html, body {
  color: white;
 }
 
-body{
+body {
 	background: url('images/background.jpg') no-repeat;
 	background-size: cover;
 }
@@ -49,6 +49,10 @@ a {
 	height: 650px;
 	background: transparent;
 	vertical-align: center;
+}
+
+#container:@media screen and (min-height: 1500px) {
+	margin-top: 25%;
 }
 
 .game-container {
@@ -122,7 +126,7 @@ button, .start-button{
 	font-style: bold;
 	margin: -25px 0px 0px 115px;
 	color: gray;
-	border: 0px;
+	border: 0px !important;
 	cursor: pointer;
 	float: right;
 	font-size: 1.6em;
@@ -167,6 +171,7 @@ button:hover {color: #00ff00; opacity: 1;}
 }
 
 .info {
+	vertical-align: bottom;
 	margin-top: -10%;
 }
 
