--- a/src/main.css
+++ b/src/main.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-	background: url('images/background.jpg') no-repeat;
+	background: url('images/background.png') no-repeat;
 	background-size: cover;
 }
 
