--- a/src/main.css
+++ b/src/main.css
@@ -50,6 +50,8 @@ a {
 	width: 1150px;
 	height: 650px;
 	background: transparent;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 body:@media screen and (min-height: 1500px) > #container {
@@ -173,6 +175,7 @@ button:hover {color: #00ff00; opacity: 1;}
 
 .info {
 	vertical-align: bottom;
+	margin-top: -10%;
 	background: transparent;
 }
 
@@ -191,6 +194,7 @@ button:hover {color: #00ff00; opacity: 1;}
 	float: right;
 	font-size: .8em;
 	margin-right: 15px;
+	opacity: .8;
 }
 
 .copyright:a {
