--- a/src/main.css
+++ b/src/main.css
@@ -50,11 +50,9 @@ a {
 	width: 1150px;
 	height: 650px;
 	background: transparent;
-	margin-top: auto;
-	margin-bottom: auto;
 }
 
-body:@media screen and (min-height: 1500px) > #container {
+body @media screen and (min-height: 1500px) > #container {
 	margin-top: 25%;
 }
 
