--- a/src/main.css
+++ b/src/main.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-	background: url('images/background.png') no-repeat;
+	background: url('https://dl.dropboxusercontent.com/s/quaxsr8vn3hdi9e/background.jpg?dl=0') no-repeat;
 	background-size: cover;
 }
 
@@ -59,12 +59,12 @@ body @media screen and (max-width: 1800px) > #container {
 .game-container {
 	width: 95%;
 	height: 100%;
-	background: url('images/axiom.png') no-repeat center;
+	background: url('https://dl.dropboxusercontent.com/s/yfg0jkm338hriyq/axiom.png?dl=0') no-repeat center;
 	margin-left: auto;
 	margin-right: auto;
 }
 .game-info {
-	margin-left: 25%;
+	margin-left: 30%;
 	width: 75%;
 	height: 25%;
 	font-size: 4em;
@@ -87,11 +87,11 @@ body @media screen and (max-width: 1800px) > #container {
 	cursor: pointer;
 	border-radius: 50%;
 	width: 21%;
-	height: 25%;
+	height: 23%;
 	background: gray;
 	background-size: 'cover';
 	opacity: .96;
-	margin: 2% 0% 0 4%;
+	margin: 3% 0% 0 4%;
     box-shadow: inset 5px 5px 15px #000;
     border: 1px solid black;
 }
@@ -189,11 +189,17 @@ button:hover {color: #00ff00; opacity: 1;}
 .copyright {
 	float: right;
 	font-size: .8em;
-	opacity: .6;
+	opacity: .4;
 }
 
 .pixar {
 	color: purple;
+}
+
+.pixar &:hover {
+	color: white;
+	opacity: 2;
+	font-size: .8;
 }
 
 @import 'reset.css'
