--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Where's Wall-E</title>
-	<link rel="stylesheet" href="src/main.css" />
+	<link rel="stylesheet" href="/src/main.css" />
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 </head>
@@ -13,7 +14,5 @@
 	<div id='container'></div>	 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  	<script src='build/react.js'></script>
-  	<script src='build/game.js' type='text/javascript'></script>
+  	<script src='/build/index.js' type='text/javascript'></script>
 </body>
-</html>
