--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,7 @@
 
 html, body {
  margin: 0;
+ padding: 0;
  color: white;
  background: transparent;
 }
@@ -76,13 +77,7 @@ a {
 	padding-left: 50px;
 	width: 55%;
 	height: 55%;
-	color: yellow;
 	display: inline-block;
-	background: transparent;
-}
-
-.grid > li {
-	float: left;
 }
 
 .game-counters > li {
